--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scenario-scraper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": ["dist"],
   "scripts": {
     "build": "tsc",
