--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "scenario-scraper",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
