--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "files": ["./src/index.ts"],
+  "files": ["src/index.ts"],
   "compilerOptions": {
     "outDir": "./dist",
     "declaration": true,
