--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,9 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals":true,
-    "noUnusedParameters": true,
-    "target": "es5",
+    "lib": ["DOM", "es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
+    "module": "commonjs",
+    "target": "es2019"
   }
 }
